<resources>
    //network
    <string name="app_name">Network Analysis</string>
    <string name="current_connected_wifi">Current connected Wifi</string>
    <string name="wifi_scan_results">Wifi scan results</string>
    <string name="hiddenWifi">HIDDEN</string>
    <string name="title_activity_main">Network Analysis</string>

    //setting
    <string name="setting_auto_update">Auto Update</string>
    <string name="setting_language">Languages</string>
    <string name="setting_theme">Themes</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_theme_one">Green-Purple</string>
    <string name="setting_theme_two">Blue-Yellow</string>


    <string name="test_connection">test</string>
    <string name="connection_class">connection</string>
    <string name="testDownloadResult">Download</string>
    <string name="unknown">unknown</string>
    <string name="unknown_manufacture">unknown_manufacture</string>
    <string name="connect_wifi_please">No wifi Connect</string>
    <string name="NEIGHBOR_REACHABLE">REACHABLE</string>
    <string name="NEIGHBOR_INCOMPLETE">INCOMPLETE</string>
    <string name="local_ip">LocalIP</string>
    <string name="connecting_gateway">Connecting GateWay:</string>
    <string name="fixer">FIXER</string>
    <string name="resolving_dns">Resolving DNS(www.google.com):</string>
    <string name="connecting_dns">Connecting DNS:</string>
    <string name="connecting_wifi">Connect to Wifi:</string>
    <string name="connecting_data">Connect to Data:</string>
    <string name="testUploadResult">Upload</string>
    <string name="search_control">Stop</string>
    <string name="head_SSID">SSID</string>
    <string name="head_frequency">Frequency</string>
    <string name="head_strength">(-dBm)</string>
</resources>