<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/setting_auto_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        android:background="@color/trans_white"
        android:elevation="3dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:id="@+id/auto_update_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_auto_update"
            android:textColor="#000"
            android:textSize="22dp"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/auto_update_checkbox"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_language"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        android:background="@color/trans_white"
        android:elevation="3dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:id="@+id/language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_language"
            android:textColor="#000"
            android:textSize="22dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_theme"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        android:background="@color/trans_white"
        android:elevation="3dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:id="@+id/theme_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_theme"
            android:textColor="#000"
            android:textSize="22dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_notification"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        android:background="@color/trans_white"
        android:elevation="3dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_notifications"
            android:textColor="#000"
            android:textSize="22dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</LinearLayout>